[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/UI/Dialogs/ImageEffects/OutlineDialog.gd" type="Script" id=1]
[ext_resource path="res://src/UI/TransparentChecker.tscn" type="PackedScene" id=2]

[node name="OutlineDialog" type="ConfirmationDialog"]
margin_right = 543.0
margin_bottom = 511.0
rect_min_size = Vector2( 172, 60.2 )
window_title = "Outline"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 535.0
margin_bottom = 475.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="VBoxContainer"]
margin_right = 527.0
margin_bottom = 359.0
size_flags_vertical = 3

[node name="Preview" type="TextureRect" parent="VBoxContainer/AspectRatioContainer"]
margin_left = 84.0
margin_right = 443.0
margin_bottom = 359.0
rect_min_size = Vector2( 200, 200 )
expand = true
stretch_mode = 5

[node name="TransparentChecker" parent="VBoxContainer/AspectRatioContainer/Preview" instance=ExtResource( 2 )]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="OptionsContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 363.0
margin_right = 527.0
margin_bottom = 467.0
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThickLabel" type="Label" parent="VBoxContainer/OptionsContainer"]
margin_top = 5.0
margin_right = 160.0
margin_bottom = 19.0
text = "Thickness:"

[node name="ThickValue" type="SpinBox" parent="VBoxContainer/OptionsContainer"]
margin_left = 164.0
margin_right = 312.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
min_value = 1.0
max_value = 16384.0
value = 1.0
suffix = "px"

[node name="OutlineColorLabel" type="Label" parent="VBoxContainer/OptionsContainer"]
margin_top = 31.0
margin_right = 160.0
margin_bottom = 45.0
text = "Fill with color:"

[node name="OutlineColor" type="ColorPickerButton" parent="VBoxContainer/OptionsContainer"]
margin_left = 164.0
margin_top = 28.0
margin_right = 312.0
margin_bottom = 48.0
rect_min_size = Vector2( 64, 20 )
color = Color( 1, 0, 0, 1 )

[node name="DiagonalCheckBox" type="CheckBox" parent="VBoxContainer/OptionsContainer"]
margin_top = 52.0
margin_right = 160.0
margin_bottom = 76.0
mouse_default_cursor_shape = 2
text = "Diagonal"

[node name="InsideImageCheckBox" type="CheckBox" parent="VBoxContainer/OptionsContainer"]
margin_left = 164.0
margin_top = 52.0
margin_right = 312.0
margin_bottom = 76.0
mouse_default_cursor_shape = 2
text = "Place inside image"

[node name="SelectionCheckBox" type="CheckBox" parent="VBoxContainer/OptionsContainer"]
margin_top = 80.0
margin_right = 160.0
margin_bottom = 104.0
mouse_default_cursor_shape = 2
pressed = true
text = "Only affect selection"

[node name="AffectOptionButton" type="OptionButton" parent="VBoxContainer/OptionsContainer"]
margin_left = 164.0
margin_top = 80.0
margin_right = 312.0
margin_bottom = 104.0
mouse_default_cursor_shape = 2
text = "Selected cels"
items = [ "Selected cels", null, false, 0, null, "Current frame", null, false, 1, null, "All frames", null, false, 2, null, "All projects", null, false, 3, null ]
selected = 0

[connection signal="value_changed" from="VBoxContainer/OptionsContainer/ThickValue" to="." method="_on_ThickValue_value_changed"]
[connection signal="color_changed" from="VBoxContainer/OptionsContainer/OutlineColor" to="." method="_on_OutlineColor_color_changed"]
[connection signal="toggled" from="VBoxContainer/OptionsContainer/DiagonalCheckBox" to="." method="_on_DiagonalCheckBox_toggled"]
[connection signal="toggled" from="VBoxContainer/OptionsContainer/InsideImageCheckBox" to="." method="_on_InsideImageCheckBox_toggled"]
